@@ -729,3 +729,16 @@ void print_std_args_usage(FILE *stream)
 	   " --verbosity, --logfile, --fileverbosity   aliased arguments\n");
 }
 
+
+void mutex_lock(pthread_mutex_t *mutex)
+{
+    if (pthread_mutex_lock(mutex) != 0)
+	panic(errno, "Mutex failure!");
+}
+
+
+void mutex_unlock(pthread_mutex_t *mutex)
+{
+    if (pthread_mutex_unlock(mutex) != 0)
+	panic(errno, "Mutex failure!");
+}
